--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.panyunyi.growingup.MainActivity"
     android:orientation="vertical">
     <ScrollView
-        app:layout_heightPercent="90%"
+        app:layout_heightPercent="92%"
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,7 +18,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/main_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         >
 
 
@@ -27,33 +27,11 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal"
-        android:weightSum="5"
+        android:weightSum="3"
         >
-        <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="5"
-        android:layout_marginBottom="4dp"
-        >
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.5"
-            android:src="@mipmap/ic_launcher"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3.5"
-            android:textSize="10sp"
-            android:gravity="center"
-            android:text="@string/title"
-            />
 
-    </LinearLayout>
         <LinearLayout
+            android:id="@+id/thinking"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -64,20 +42,22 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
+                android:layout_weight="1.9"
+                android:src="@drawable/main_activity_thinking"
                 />
             <TextView
+                android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="3.5"
+                android:layout_weight="3.1"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:text="@string/title"
+                android:text="@string/thinking"
                 />
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/inspire"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -88,20 +68,22 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
+                android:layout_weight="1.9"
+                android:src="@drawable/main_activity_inspiration"
                 />
             <TextView
+                android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="3.5"
+                android:layout_weight="3.1"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:text="@string/title"
+                android:text="@string/inspiration"
                 />
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/accept"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -112,40 +94,17 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
+                android:layout_weight="1.9"
+                android:src="@drawable/main_activity_accept"
                 />
             <TextView
+                android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="3.5"
+                android:layout_weight="3.1"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:text="@string/title"
-                />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="5"
-            android:layout_marginBottom="4dp"
-            >
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3.5"
-                android:textSize="10sp"
-                android:gravity="center"
-                android:text="@string/title"
+                android:text="@string/accept"
                 />
 
         </LinearLayout>
@@ -164,7 +123,7 @@
         android:layout_marginLeft="8dp"
         >
         <RelativeLayout
-            android:id="@+id/knowlwdge_news"
+            android:id="@+id/knowledge_news"
             android:layout_width="match_parent"
             android:layout_height="30dp">
         <TextView
@@ -177,6 +136,7 @@
             android:layout_alignParentLeft="true"
             />
         <TextView
+            android:id="@+id/showAll"
             android:layout_alignParentRight="true"
             android:layout_width="50dp"
             android:layout_height="match_parent"
@@ -213,6 +173,7 @@
                     android:layout_alignParentLeft="true"
                     />
                 <TextView
+                    android:id="@+id/haveAChange"
                     android:layout_alignParentRight="true"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
@@ -233,130 +194,113 @@
 
     </ScrollView>
     <LinearLayout
-        app:layout_heightPercent="10%"
+        app:layout_heightPercent="9%"
         android:layout_below="@id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal"
-        android:weightSum="5"
+        android:weightSum="4"
+        android:layout_marginBottom="4dp"
         >
         <LinearLayout
+            android:id="@+id/youth"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="5"
-            android:layout_marginBottom="4dp"
+
             >
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/main_activity_youth"
                 />
             <TextView
+                android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3.5"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:text="@string/title"
+                android:text="@string/youth"
                 />
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/expert"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="5"
-            android:layout_marginBottom="4dp"
             >
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/main_activity_expert"
                 />
             <TextView
+                android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3.5"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:text="@string/title"
+                android:text="@string/expert"
                 />
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/communist"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="5"
-            android:layout_marginBottom="4dp"
+
             >
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/main_activity_communist"
                 />
             <TextView
+                android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3.5"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:text="@string/title"
+                android:text="@string/communist"
                 />
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/mine"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="5"
-            android:layout_marginBottom="4dp"
             >
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/main_activity_mine"
                 />
             <TextView
+                android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3.5"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:text="@string/title"
-                />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="5"
-            android:layout_marginBottom="4dp"
-            >
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:src="@mipmap/ic_launcher"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3.5"
-                android:textSize="10sp"
-                android:gravity="center"
-                android:text="@string/title"
+                android:text="我"
                 />
 
         </LinearLayout>
