--- a/MyApplication/app/src/main/res/layout/main_activity_teacher_list_item.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity_teacher_list_item.xml
@@ -3,16 +3,11 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="30dp"
     >
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="60dp"
+        android:layout_height="40dp" />
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="▶"
-        android:layout_marginRight="8dp"
-        android:gravity="center_vertical"
-        />
-    <TextView
-        android:id="@+id/knowledge_news_list_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="wrap_content" />
 </LinearLayout>
