--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.panyunyi.growingup.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/main"
+    >
     <ScrollView
         app:layout_heightPercent="92%"
         android:id="@+id/scrollView"
@@ -27,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal"
+        android:layout_marginTop="8dp"
         android:weightSum="3"
         >
 
@@ -109,6 +112,11 @@
 
         </LinearLayout>
     </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="#fffff0"
+            />
     <ImageView
         android:id="@+id/main_picture"
         android:layout_margin="8dp"
@@ -119,7 +127,7 @@
     <RelativeLayout
 
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="8dp"
         >
 
@@ -133,9 +141,10 @@
             android:text="知识新闻|免费"
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:textStyle="bold"
+            android:textSize="12sp"
             android:layout_alignParentLeft="true"
             />
         <TextView
@@ -144,7 +153,7 @@
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:textSize="10dp"
+            android:textSize="10sp"
             android:text="查看全部 >"
             />
         </RelativeLayout>
@@ -158,7 +167,7 @@
         <RelativeLayout
 
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             >
@@ -170,9 +179,10 @@
                     android:text="辅导老师|预约"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
                     android:textStyle="bold"
+                    android:textSize="12sp"
                     android:layout_alignParentLeft="true"
                     />
                 <TextView
@@ -181,7 +191,7 @@
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:gravity="right|center_vertical"
-                    android:textSize="10dp"
+                    android:textSize="10sp"
                     android:text="换一换↔"
                     />
             </RelativeLayout>
@@ -205,6 +215,7 @@
 
             </RelativeLayout>
         </RelativeLayout>
+
     </LinearLayout>
 
 
