--- a/MyApplication/app/src/main/res/layout/main_activity_knowledge_list.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity_knowledge_list.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="20dp">
 
-
+    <TextView
+        android:id="@+id/knowledge_news_list_text_title"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        />
     <TextView
         android:id="@+id/knowledge_news_list_text_content"
         android:layout_width="wrap_content"
@@ -12,9 +17,6 @@
         android:layout_marginRight="8dp"
         android:gravity="center_vertical"
         />
-    <TextView
-        android:id="@+id/knowledge_news_list_text_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
 
 </LinearLayout>
