修复bug： 1. 推荐给朋友 实现不集成SDK直接推送到朋友圈 增加功能： 1. 增加 PartyActivity ProfileActivity 2. 页面跳转链接 设计模式： 1. Login 采用工厂模式进行改造，保留session进行后续验证 引入module： 1. 分别对应两个activity

--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,54 @@
     tools:context="com.example.panyunyi.growingup.MainActivity"
     android:orientation="vertical"
     android:id="@+id/main"
+    app:layout_heightPercent="100%"
     >
+    <RelativeLayout
+        android:id="@+id/find"
+
+        app:layout_heightPercent="6%"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+
+        >
+        <ImageView
+            android:id="@+id/search"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:src="@drawable/accept_activity_search"
+            />
+<TextView
+    android:layout_gravity="center"
+    android:layout_marginLeft="16dp"
+    android:layout_centerInParent="true"
+    android:gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="发现"
+    android:textSize="20dp"
+    android:layout_marginRight="16dp"
+
+    />
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/find"
+        android:background="@drawable/single_line"
+
+        >
+
+
+    </View>
     <ScrollView
-        app:layout_heightPercent="92%"
+        android:layout_marginTop="8dp"
+        app:layout_heightPercent="84%"
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/find"
+
+        >
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
