--- a/MyApplication/app/src/main/res/layout/activity_inspire_recycleview_items.xml
+++ b/MyApplication/app/src/main/res/layout/activity_inspire_recycleview_items.xml
@@ -8,12 +8,12 @@
         android:layout_height="7dp"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
-        android:background="#2b55ee" />
+        android:background="#fff010" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/inspireCardView"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="250dp"
         app:cardBackgroundColor="#ffffff"
         app:cardCornerRadius="4dp"
         android:elevation="@dimen/cardview_compat_inset_shadow"
