<feat&&fix>(<src>): <huge changes in many aspects>
#fix :
- fix the bugs of webview which cannot display the Chinese,
- fix the login animation
- change the API
#feat:
- onclick() in main page is accomplished
- do some small changes that i can remember
- change  ic_lancher.png

--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -196,6 +196,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textSize="10sp"
+            android:clickable="true"
             android:text="查看全部 >"
             />
         </RelativeLayout>
