--- a/MyApplication/app/src/main/res/layout/main_activity_knowledge_list.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity_knowledge_list.xml
@@ -7,8 +7,8 @@
         android:id="@+id/knowledge_news_list_text_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        />
+        android:gravity="center_vertical" />
+
     <TextView
         android:id="@+id/knowledge_news_list_text_content"
         android:layout_width="wrap_content"
