--- a/MyApplication/app/src/main/res/layout/main_activity_knowledge_list.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity_knowledge_list.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="20dp">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
     <TextView
         android:id="@+id/knowledge_news_list_text_title"
         android:layout_width="match_parent"
@@ -18,5 +21,12 @@
         android:gravity="center_vertical"
         />
 
+</LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
 
+        >
+
+    </View>
 </LinearLayout>
