<feat>(<src>): <add 2 features> #feat: - add the register function - add online environment and dev environment

--- a/MyApplication/app/src/main/res/drawable/timelline_dot_first.xml
+++ b/MyApplication/app/src/main/res/drawable/timelline_dot_first.xml
@@ -5,5 +5,5 @@
     <size
         android:width="10dp"
         android:height="10dp" />
-    <solid android:color="#555555" />
+    <solid android:color="#3eb370" />
 </shape>
