--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/main_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         >
 
 
@@ -283,19 +283,21 @@
             >
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="30dp"
                 android:layout_weight="1.5"
+                android:layout_marginBottom="4dp"
                 android:src="@drawable/main_activity_youth"
                 />
+
             <TextView
-                android:layout_marginTop="2dp"
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="2dp"
                 android:layout_weight="3.5"
-                android:textSize="10sp"
                 android:gravity="center"
                 android:text="@string/youth"
-                />
+                android:textSize="10sp" />
 
         </LinearLayout>
         <LinearLayout
@@ -306,12 +308,15 @@
             android:orientation="vertical"
             android:weightSum="5"
             >
+
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="30dp"
                 android:layout_weight="1.5"
-                android:src="@drawable/main_activity_expert"
-                />
+                android:layout_marginBottom="4dp"
+                android:src="@drawable/main_activity_expert" />
+
             <TextView
                 android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
@@ -334,8 +339,9 @@
             >
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="30dp"
                 android:layout_weight="1.5"
+                android:layout_marginBottom="4dp"
                 android:src="@drawable/main_activity_communist"
                 />
             <TextView
@@ -359,8 +365,9 @@
             >
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="30dp"
                 android:layout_weight="1.5"
+                android:layout_marginBottom="4dp"
                 android:src="@drawable/main_activity_mine"
                 />
             <TextView
