--- a/MyApplication/app/src/main/res/layout/activity_accept.xml
+++ b/MyApplication/app/src/main/res/layout/activity_accept.xml
@@ -40,8 +40,7 @@
         app:met_maxCharacters="6000"
         app:met_primaryColor="?colorAccent"
         app:met_singleLineEllipsis="true"
-        android:layout_below="@id/accept_activity_title"
-        />
+        android:layout_centerVertical="true" />
 
     <ImageView
 
@@ -50,5 +49,10 @@
         android:src="@drawable/accept_activity_send"
         android:layout_below="@id/accept_edit_text"
         android:layout_margin="@dimen/activity_vertical_margin"
-        />
+        android:id="@+id/accept_submit" />
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
 </android.support.percent.PercentRelativeLayout>
