--- a/MyApplication/app/src/main/res/layout/activity_login_register.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login_register.xml
@@ -300,6 +300,11 @@
             android:text="注册"
             android:textColor="@color/colorAccent"
             android:textSize="16sp" />
-
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"/>
     </LinearLayout>
+
 </FrameLayout>
