--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -270,7 +270,9 @@
         android:layout_height="40dp"
         android:orientation="horizontal"
         android:weightSum="4"
-        android:layout_marginBottom="4dp"
+
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         >
         <LinearLayout
             android:id="@+id/youth"
