--- a/MyApplication/app/src/main/res/drawable/baseline.xml
+++ b/MyApplication/app/src/main/res/drawable/baseline.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="2dp"></corners>
-    <solid android:color="#fffff0"></solid>
+    <solid android:color="#302833"></solid>
     <stroke android:width="1dp"></stroke>
 
 </shape>
