--- a/MyApplication/app/src/main/res/layout/activity_message.xml
+++ b/MyApplication/app/src/main/res/layout/activity_message.xml
@@ -1,68 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@color/gray"
     android:orientation="vertical">
 
     <TextView
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:gravity="center"
         android:text="预约进度"
+        android:textColor="#ffffff"
         android:textSize="23dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="8dp"
-        android:background="#000000"/>
+        android:background="#ffffff"
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/message_recycler"
+        />
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_vertical_margin">
+        android:layout_height="200dp"
+        android:background="@color/orange"
+        android:layout_marginTop="32dp"
+        >
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:layout_alignParentBottom="true"
+            android:id="@+id/message_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            ></android.support.v7.widget.RecyclerView>
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:paddingTop="32dp"
+        android:background="@color/orange"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/order_teacher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_vertical_margin"
+            android:background="@color/orange"
+            android:text="xx老师  2017/06/09 13:00--14:00 "
 
-            android:text="xx老师  2017/06/09 13:00--14:00 " />
+            android:textColor="#ffffff" />
+
         <ImageView
             android:id="@+id/message_phone"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/message_activity_phone"
             android:layout_marginLeft="16dp"
-            />
+            android:background="@color/orange"
+            android:src="@drawable/message_activity_phone" />
     </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="64dp">
-    <ImageView
 
-        android:id="@+id/message_quit"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/message_activity_quit"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="取消预约"
-        android:layout_gravity="center"
-        />
-</LinearLayout>
+        android:layout_marginTop="64dp"
+        android:orientation="vertical">
+
+        <ImageView
+
+            android:id="@+id/message_quit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="center"
+            android:src="@drawable/mine_activity_exit" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="取消预约"
+            android:textColor="#ffffff" />
+    </LinearLayout>
 </LinearLayout>
