--- a/MyApplication/app/src/main/res/layout/main_activity_knowledge_list.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity_knowledge_list.xml
@@ -10,6 +10,7 @@
         android:id="@+id/knowledge_news_list_text_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textColor="#ffffff"
         android:gravity="center_vertical" />
 
     <TextView
@@ -17,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="▶"
+        android:textColor="#ffffff"
         android:layout_marginRight="8dp"
         android:gravity="center_vertical"
         />
